# lightcontrol

./: CMakeLists.txt
dde-lamplight-plugin/: CMakeLists.txt  lamplight.json  lamplightconfigwidget.cpp  lamplightconfigwidget.h  lamplightmodule.cpp  lamplightmodule.h  lightmodel.cpp  lightmodel.h  resources.qrc
debian/: changelog  control  copyright
